--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-tensorflow==2.16.1  # First version with Python 3.13 support
-pandas>=2.1.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
-matplotlib>=3.8.0
-streamlit>=1.28.0
+python-3.11
+tensorflow==2.15.0
+pandas 
+numpy
+scikit-learn
+matplotlib
+streamlit
